Update tags on serverless post

--- a/data/blog/talks/serverless-what-why-how.mdx
+++ b/data/blog/talks/serverless-what-why-how.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Serverless: What, why, how?"
 date: '2021-09-16'
-tags: ['aws', 'serverless', 'lambda', 'sqs', 'dynamodb', 'api-gateway']
+tags: ['aws', 'serverless', 'lambda', 'sqs', 'dynamodb', 'api-gateway', 'talks']
 draft: false
 summary: A talk I gave to Norfolk Developers all about Serverless
 ---
@@ -24,7 +24,7 @@ Catch the replay on YouTube below.
   height="250"
   src="https://www.youtube.com/embed/6hBmjYPNdnc" 
   title="Serverless: What, why, how?" 
-  frameborder="0" 
+  frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-  allowfullscreen
+  allowFullScreen
 ></iframe>
