Fixes link on 2021 year in review

--- a/src/pages/articles/2021-year-in-review.mdx
+++ b/src/pages/articles/2021-year-in-review.mdx
@@ -12,7 +12,7 @@ export default (props) => <ArticleLayout meta={meta} {...props} />
 
 Where to start? I skipped a year in review post for 2020 very deliberately. Whilst there were many moments of note, the lockdown at the end of the year made it difficult to find the motivation to reflect on the year. For this reason, I'm going to reflect upon 2020 and 2021 all in one go.
 
-These last two years have been a bit of a blur to be completely honest - when I was planning this post I struggled to work out exactly what happened and when! But here goes, let's see what I've been up to. As a reminder, [here's](http://localhost:3000/blog/2019-year-in-review) my look back at 2019. 
+These last two years have been a bit of a blur to be completely honest - when I was planning this post I struggled to work out exactly what happened and when! But here goes, let's see what I've been up to. As a reminder, [here's](/articles/2019-year-in-review) my look back at 2019. 
 
 ## 2020
 I'm going to blitz through 2020 because a lot of it isn't worth remembering.
