--- a/src/pages/articles/reinvent-2022-session-guide.mdx
+++ b/src/pages/articles/reinvent-2022-session-guide.mdx
@@ -9,3 +9,18 @@ export const meta = {
 
 export default (props) => <ArticleLayout meta={meta} {...props} />
 
+I'm lucky enough to be attending re:Invent 2022 this year and as reservations for the sessions open later today (Tues 11 Oct 2022 6pm BST), I thought I would follow others and produce a guide of those sessions that I think are the most valuable. There are so many sessions that I'd love to see, but only so much time in the day.
+
+This guide is closely aligned wih my interests in serverless, event driven architectures and general AWS best practices. That does mean that it might not quite fit with what you want to get out of re:Invent.
+
+If you're catching up with this guide after all the reservation slots have gone, not to worry - there is usually space for walk-up attendees.
+
+## Monday 28th Nov
+
+## Tuesday 29th Nov
+
+## Wednesday 30th Nov
+
+## Thursday 1st Dec
+
+## Friday 2nd Dev
