--- a/src/pages/articles/reinvent-2022-session-guide.mdx
+++ b/src/pages/articles/reinvent-2022-session-guide.mdx
@@ -16,11 +16,11 @@ This guide is closely aligned wih my interests in serverless, event driven archi
 ## Monday 28th Nov
 
 ### API311: Building next-gen applications with event-driven architectures [300]
-- **10:00 AM - 11:00 AM**
+- 10:00 AM - 11:00 AM
 - Level 1, Lafite 5, Wynn
 - Breakout Session
 
-**Speakers**
+*Speakers*
 - TBA
 
 Event-driven architectures can solve many difficult problems in modern enterprise workloads. For example, it can be challenging to work with large amounts of data in different data stores and locations. Teams building microservices architecture often find that integration with other applications and external services can make their workloads more monolithic and tightly coupled. In this chalk talk, learn how to use event-based architecture to decouple and decentralize application components. Discover how you can use AWS messaging services to connect microservices and coordinate data flow using minimal custom code.
@@ -30,7 +30,7 @@ Event-driven architectures can solve many difficult problems in modern enterpris
 - Level 3, 354, MGM Grand
 - Chalk Talk
 
-**Speakers**
+*Speakers*
 - David Boyne, Senior Developer Advocate, AWS
 
 Event-driven applications can help you to reduce coupling and increase agility. The design and contracts of your events shape how your distributed architecture is built and determine how it can best remain decoupled, scalable, and fault tolerant. In this chalk talk, learn a robust approach to event design, common event patterns used, the importance of event-first thinking, and how event designation can impact your architecture.
@@ -56,7 +56,7 @@ Join Adam Selipsky, CEO of Amazon Web Services, as he looks at the ways that for
 - Level 1, Forum 104, Caesars Forum
 - Chalk Talk
 
-**Speakers**
+*Speakers*
 - Harold Sun, Senior Specialist Solutions Architect, Serverless, AWS
 
 AWS Lambda extensions open up the Lambda execution environment and provide lifecycle hooks. This chalk talk gives you a deeper look at how to use Lambda extensions to extend a Lambda programing model to run web applications on Lambda, implement chaos engineering, clean up resources with smooth shutdown, inject secrets as environment variables, and debug Lambda functions live. Learn how to supercharge your serverless applications with Lambda extensions.
@@ -66,7 +66,7 @@ AWS Lambda extensions open up the Lambda execution environment and provide lifec
 - Level 2 South, Lagoon L, Mandalay Bay
 - Breakout Session
 
-**Speakers**
+*Speakers*
 - Colm MacCarthaigh, VP / Distinguished Engineer, AWS
 - David Yanacek, Sr. Principal Engineer, AWS
 
@@ -86,7 +86,7 @@ Join Swami Sivasubramanian, Vice President of AWS Data and Machine Learning, as 
 - Level 1, Summit 214, Caesars Forum
 - Breakout Session
 
-**Speakers**
+*Speakers*
 - TBA
 
 In this session, learn about Amazon’s never-ending journey for the perfect granularity of observability. This session covers the full range of monitoring at Amazon—from how teams assess system health at a high level to how they zoom in to understand the details of a single request. Learn best practices for metrics, logs, and tracing and how to use these signals to achieve operational excellence.
@@ -96,7 +96,7 @@ In this session, learn about Amazon’s never-ending journey for the perfect gra
 - Level 1, Alliance 312, Caesars Forum
 - Builders' Session
 
-**Speakers**
+*Speakers*
 - Gagan Brahmi, Specialist Solutions Architect, AWS
 - Changbin Gong, Principal Solutions Architect, Amazon
 - Amir Basirat, Senior Analytics Specialist Solutions Architect, AWS
@@ -108,7 +108,7 @@ In this session, learn about Amazon’s never-ending journey for the perfect gra
 - Level 2, Venetian Theatre, Venetian
 - Breakout Session
 
-**Speakers**
+*Speakers*
 - Colm MacCarthaigh, VP / Distinguished Engineer, AWS
 
 Updated with recent learning, this session dives deep into building and improvising resilience in AWS services. Every AWS service is designed to be highly available, but a small number of what are called Tier 0 services get extra-special attention. In this session, hear lessons from how AWS has built and architected Amazon Route 53 and the AWS authentication system to help them survive cataclysmic failures, enormous load increases, and more. Learn about the AWS approach to redundancy and resilience at the infrastructure, software, and team levels and how the teams tasked with keeping the internet running manage themselves and keep up with the pace of change that AWS customers demand.
@@ -118,7 +118,7 @@ Updated with recent learning, this session dives deep into building and improvis
 - Level 3 South, Jasmine F, Mandalay Bay
 - Breakout Session
 
-**Speakers**
+*Speakers*
 - Laura Hyatt, Solutions Architect, AWS
 - Tony Politano, Principal Product Manager, Amazon
 
@@ -138,7 +138,7 @@ Join Dr. Werner Vogels, Amazon.com VP and CTO, as he shows how customers and AWS
 - Level 1, Grand 121, MGM Grand
 - Breakout Session
 
-**Speakers**
+*Speakers*
 - Darko Meszaros, Developer Advocate, AWS
 - Alexander Schueren, Senior Specialist Solutions Architect, AWS
 
@@ -149,7 +149,7 @@ Serverless architectures allow developers to modernize their applications by ret
 - Level 5, Palazzo Ballroom B, Venetian
 - Leadership Session
 
-**Speakers**
+*Speakers*
 - Adam Seligman, VP Developer Experience, AWS
 - Emily Freeman, Head of Community Engagement, AWS
 
@@ -160,7 +160,7 @@ In this session, join Adam Seligman, Vice President of Developer Experience, as 
 - Level 2 South, Lagoon I, Mandalay Bay
 - Breakout Session
 
-**Speakers**
+*Speakers*
 - Stephen Liedig, Principal Serverless Specialist Solutions Architect, AWS
 
 Event-driven architecture can bring alignment to an organization’s business capabilities. Amazon EventBridge enables application integration across business applications and improves modern application development practices. In this session, learn about the roles and responsibilities of stakeholder groups and discover foundational concepts for designing and building a sustainable, scalable, serverless event bus for your organization.
@@ -172,7 +172,7 @@ Event-driven architecture can bring alignment to an organization’s business ca
 - Level 1, Forum 113, Caesars Forum
 - Breakout Session
 
-**Speakers**
+*Speakers*
 - Abby Fuller, Security @ EC2, AWS
 
 On December 9, 2021, there was a report of a potential remote code execution issue in the widely used open-source Apache logging library Log4j. This issue allowed a user to use Java Naming and Directory Interface (JNDI) and LDAP endpoints to execute arbitrary code on a system. Over the next 10 days, 5 additional common vulnerabilities and exposures affecting Log4j were made public. This event as is now referred to as Log4Shell. In this session, learn about the response to Log4Shell, from initial notification to hot patch, fleet scanning, and customer communications.
