Fix missing session and typo on re:Invent guide

--- a/src/pages/articles/reinvent-2022-session-guide.mdx
+++ b/src/pages/articles/reinvent-2022-session-guide.mdx
@@ -11,7 +11,7 @@ export default (props) => <ArticleLayout meta={meta} {...props} />
 
 I'm lucky enough to be attending re:Invent 2022 this year and as reservations for the sessions open later today (Tues 11 Oct 2022 6pm BST), I thought I would follow others and produce a guide of those sessions that I think are the most valuable. There are so many sessions that I'd love to see, but only so much time in the day.
 
-This guide is closely aligned wih my interests in serverless, event driven architectures and general AWS best practices. That does mean that it might not quite fit with what you want to get out of re:Invent. If you're catching up with this guide after all the reservation slots have gone, not to worry - there is usually space for walk-up attendees. Session descriptions are all taken verbatim from the re:Invent session catalog.
+This guide is closely aligned with my interests in serverless, event driven architectures and general AWS best practices. That does mean that it might not quite fit with what you want to get out of re:Invent. If you're catching up with this guide after all the reservation slots have gone, not to worry - there is usually space for walk-up attendees. Session descriptions are all taken verbatim from the re:Invent session catalog.
 
 ## Monday 28th Nov
 
@@ -34,6 +34,17 @@ Event-driven architectures can solve many difficult problems in modern enterpris
 - David Boyne, Senior Developer Advocate, AWS
 
 Event-driven applications can help you to reduce coupling and increase agility. The design and contracts of your events shape how your distributed architecture is built and determine how it can best remain decoupled, scalable, and fault tolerant. In this chalk talk, learn a robust approach to event design, common event patterns used, the importance of event-first thinking, and how event designation can impact your architecture.
+
+### COP330: Scale with managed open-source observability [300]
+- 2:30 PM - 3:30 PM
+- Level 1, Forum 110, Caesars Forum
+- Chalk Talk
+
+*Speakers*
+- Bhuwan Sahni, Principal Software Dev Engineer, AWS
+- Abhinav Khanna, Senior Product Manager, AWS
+
+As enterprises scale, they require application reliability and availability to keep up with their growth, especially to monitor the increasing millions of pieces of operational data generated. Join this chalk talk to hear about what's new in our AWS managed open-source services that can help you to securely set up a single pane of glass across alerts and observability telemetry with Amazon Managed Service for Prometheus, Amazon Managed Grafana, and AWS Distro for OpenTelemetry. Learn about best practices and discuss how to use newly launched features to build out a scalable, highly available open-source observability solution with unified alert management.
 
 ### KEY001: Monday Night Live with Peter DeSantis
 - 7:30 PM - 9:00 PM
