Add re:Invent wishlist part two article

--- a/src/pages/articles/reinvent-2022-wishlist-part-one.mdx
+++ b/src/pages/articles/reinvent-2022-wishlist-part-one.mdx
@@ -67,7 +67,7 @@ Resources:
 
 ## Executing a Step Functions workflow task as an assumed role
 
-The next item (and the final one actually) on my wishlist for this entry in the series are centred around AWS Step Functions.
+The next item on my wishlist for this entry in the series are centred around AWS Step Functions.
 
 This particular item is to be able to execute a Step Functions workflow task with an assumed role. This would enable patterns where a workflow needs to access something in a different account as part of its definition.
 
