Upgrade to Next 13.4

--- a/src/pages/articles/a-first-peek-at-lambda-powertools/index.mdx
+++ b/src/pages/articles/a-first-peek-at-lambda-powertools/index.mdx
@@ -1,5 +1,5 @@
 import { ArticleLayout } from '@/components/ArticleLayout'
-import Image from 'next/future/image'
+import Image from 'next/image'
 import loggerImage from './logger.png'
 import tracerImage from './tracer.png'
 
